--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
         "sass": "^1.56.1",
         "sass-loader": "^12.6.0",
         "vite": "^4.0.0",
-        "vue": "^3.2.37",
-        "vue-loader": "^16.8.3"
+        "vue": "^3.3.7",
+        "vue-loader": "^16.8.3",
+        "vue-template-compiler": "^2.7.15"
     },
     "dependencies": {
         "laravel-mix": "^6.0.49"
