--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.0.0",
-        "axios": "^1.1.2",
+        "axios": "^1.6.0",
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^0.7.2",
         "lodash": "^4.17.19",
@@ -26,6 +26,10 @@
         "vue-template-compiler": "^2.7.15"
     },
     "dependencies": {
-        "laravel-mix": "^6.0.49"
+        "jquery": "^3.7.1",
+        "laravel-mix": "^6.0.49",
+        "primevue": "^3.39.0",
+        "sweetalert2": "^11.9.0",
+        "vform": "^2.1.2"
     }
 }
