--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
         "sass": "^1.56.1",
         "sass-loader": "^12.6.0",
         "vite": "^4.0.0",
-        "vue": "^3.3.7",
-        "vue-loader": "^16.8.3",
+        "vue": "^3.2.36",
+        "vue-loader": "^17.3.1",
         "vue-template-compiler": "^2.7.15"
     },
     "dependencies": {
+        "@vue/compiler-sfc": "^3.3.8",
+        "chart.js": "^4.4.0",
         "jquery": "^3.7.1",
         "laravel-mix": "^6.0.49",
         "primevue": "^3.39.0",
         "sweetalert2": "^11.9.0",
-        "vform": "^2.1.2"
+        "vform": "^2.1.2",
+        "vue-router": "^4.2.5"
     }
 }
