--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "@vue/compiler-sfc": "^3.3.8",
+        "admin-lte": "^3.2.0",
         "chart.js": "^4.4.0",
         "jquery": "^3.7.1",
         "laravel-mix": "^6.0.49",
