--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "dependencies": {
         "@vue/compiler-sfc": "^3.3.8",
         "admin-lte": "^3.2.0",
-        "chart.js": "^4.4.0",
+        "chart.js": "^3.9.1",
         "jquery": "^3.7.1",
         "laravel-mix": "^6.0.49",
         "primevue": "^3.39.0",
         "sweetalert2": "^11.9.0",
         "vform": "^2.1.2",
+        "vue-chartjs": "^5.2.0",
         "vue-router": "^4.2.5"
     }
 }
