--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "chart.js": "^3.9.1",
         "jquery": "^3.7.1",
         "laravel-mix": "^6.0.49",
+        "laravel-vue-pagination": "^4.1.1",
         "primevue": "^3.39.0",
         "sweetalert2": "^11.9.0",
         "vform": "^2.1.2",
