--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,13 @@
         "google/cloud-storage": "^1.36",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.9",
+        "laravel/cashier": "^14.14",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
-        "league/flysystem-aws-s3-v3": "^3.23"
+        "league/flysystem-aws-s3-v3": "^3.23",
+        "stripe/stripe-php": "^10.21"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
