--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.7.15"
     },
     "dependencies": {
+        "@stripe/stripe-js": "^2.4.0",
         "@vue/compiler-sfc": "^3.3.8",
         "admin-lte": "^3.2.0",
         "chart.js": "^3.9.1",
@@ -34,6 +35,7 @@
         "laravel-vue-pagination": "^4.1.3",
         "primevue": "^3.39.0",
         "shetabit-laravel-vue-pagination": "^2.3.7",
+        "stripe": "^14.15.0",
         "sweetalert2": "^11.9.0",
         "vform": "^2.1.2",
         "vue-highlight-text": "^1.6.2",
