--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.4",
+        "league/csv": "^9.15",
         "league/flysystem-aws-s3-v3": "^3.23",
         "stripe/stripe-php": "^10.21"
     },
