--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.7.15"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.1",
         "@stripe/stripe-js": "^2.4.0",
         "@vue/compiler-sfc": "^3.3.8",
         "admin-lte": "^3.2.0",
