--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/cashier": "^14.14",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.4",
         "league/csv": "^9.15",
