--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
         "vue-template-compiler": "^2.7.15"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.5.1",
         "@stripe/stripe-js": "^2.4.0",
         "@vue/compiler-sfc": "^3.3.8",
         "admin-lte": "^3.2.0",
         "chart.js": "^3.9.1",
+        "clipboard": "^2.0.11",
         "jquery": "^3.7.1",
         "laravel-mix": "^6.0.49",
         "laravel-vue-pagination": "^4.1.3",
@@ -39,6 +39,7 @@
         "vue-highlight-text": "^1.6.2",
         "vue-highlight-words": "^3.0.1",
         "vue-router": "^4.2.5",
-        "vue-word-highlighter": "^1.2.3"
+        "vue-word-highlighter": "^1.2.3",
+        "vue3-clipboard": "^1.0.0"
     }
 }
