--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/ui": "^4.4",
         "league/csv": "^9.15",
         "league/flysystem-aws-s3-v3": "^3.23",
-        "stripe/stripe-php": "^10.21"
+        "stripe/stripe-php": "^10.21",
+        "twbs/bootstrap-icons": "^1.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
