--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@stripe/stripe-js": "^2.4.0",
         "@vue/compiler-sfc": "^3.3.8",
         "admin-lte": "^3.2.0",
+        "bootstrap-icons": "^1.11.3",
         "chart.js": "^3.9.1",
         "clipboard": "^2.0.11",
         "jquery": "^3.7.1",
