--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^3.9.1",
         "clipboard": "^2.0.11",
+        "html2canvas": "^1.4.1",
         "jquery": "^3.7.1",
         "laravel-mix": "^6.0.49",
         "laravel-vue-pagination": "^4.1.3",
