--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^4.4",
         "league/csv": "^9.15",
         "league/flysystem-aws-s3-v3": "^3.23",
+        "spatie/laravel-analytics": "^4.1",
         "stripe/stripe-php": "^10.21",
         "twbs/bootstrap-icons": "^1.11"
     },
