--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "almasaeed2010/adminlte": "~3.2",
+        "barryvdh/laravel-dompdf": "^2.2",
         "google/cloud-storage": "^1.36",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.9",
@@ -18,6 +19,7 @@
         "laravel/ui": "^4.4",
         "league/csv": "^9.15",
         "league/flysystem-aws-s3-v3": "^3.23",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-analytics": "^4.1",
         "stripe/stripe-php": "^10.21",
         "twbs/bootstrap-icons": "^1.11"
