--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "clipboard": "^2.0.11",
         "html2canvas": "^1.4.1",
         "jquery": "^3.7.1",
+        "jspdf": "^2.5.1",
         "laravel-mix": "^6.0.49",
         "laravel-vue-pagination": "^4.1.3",
         "primevue": "^3.39.0",
