dropdown toggle fixed

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.11.8",
+        "laravel-mix": "^6.0.11",
         "axios": "^1.6.0",
         "bootstrap": "^5.3.3",
         "lodash": "^4.17.19",
