--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "laravel-mix": "^6.0.11",
         "axios": "^1.6.0",
         "bootstrap": "^5.3.3",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "postcss-import": "^16.1.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
         "sass-loader": "^12.6.0",
-        "vue": "^3.2.36",
-        "vue-loader": "^17.3.1",
-        "vue-template-compiler": "^2.7.15"
+        "vue": "^3.4.27",
+        "vue-loader": "^17.4.2",
+        "vue-template-compiler": "^2.7.16"
     },
     "dependencies": {
         "@stripe/stripe-js": "^2.4.0",
@@ -32,7 +33,6 @@
         "html2canvas": "^1.4.1",
         "jquery": "^3.7.1",
         "jspdf": "^2.5.1",
-        "laravel-mix": "^6.0.49",
         "laravel-vue-pagination": "^4.1.3",
         "primevue": "^3.39.0",
         "shetabit-laravel-vue-pagination": "^2.3.7",
