--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         "league/flysystem-aws-s3-v3": "^3.23",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-analytics": "^4.1",
-        "stripe/stripe-php": "^10.21",
-        "twbs/bootstrap-icons": "^1.11"
+        "stripe/stripe-php": "^10.21"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
