--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "build": "webpack --config webpack.config.js"
     },
     "devDependencies": {
         "axios": "^1.6.0",
@@ -21,9 +22,12 @@
         "sass-loader": "^12.6.0",
         "vue": "^3.4.27",
         "vue-loader": "^17.4.2",
-        "vue-template-compiler": "^2.7.16"
+        "vue-template-compiler": "^2.5.16",
+        "webpack": "^5.91.0",
+        "webpack-cli": "^5.1.4"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
         "@stripe/stripe-js": "^2.4.0",
         "@vue/compiler-sfc": "^3.3.8",
         "admin-lte": "^3.2.0",
