--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "vue-highlight-words": "^3.0.1",
         "vue-router": "^4.2.5",
         "vue-word-highlighter": "^1.2.3",
-        "vue3-clipboard": "^1.0.0"
+        "vue3-clipboard": "^1.0.0",
+        "vue3-touch-events": "^4.1.8"
     }
 }
