--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^3.9.1",
         "clipboard": "^2.0.11",
+        "hammerjs": "^2.0.8",
         "html2canvas": "^1.4.1",
         "jquery": "^3.7.1",
         "jspdf": "^2.5.1",
