--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.0",
         "almasaeed2010/adminlte": "~3.2",
         "barryvdh/laravel-dompdf": "^2.2",
         "google/cloud-storage": "^1.36",
@@ -14,7 +14,7 @@
         "laravel/cashier": "^14.14",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/socialite": "^5.12",
+        "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.4",
         "league/csv": "^9.15",
@@ -70,6 +70,9 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true
+        },
+        "platform": {
+            "php": "8.3.8"
         }
     },
     "minimum-stability": "stable",
