--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "vue-router": "^4.2.5",
         "vue-word-highlighter": "^1.2.3",
         "vue3-clipboard": "^1.0.0",
-        "vue3-touch-events": "^4.1.8"
+        "vue3-touch-events": "^4.1.8",
+        "xlsx": "^0.18.5"
     }
 }
