--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "jspdf": "^2.5.1",
         "laravel-vue-pagination": "^4.1.3",
         "primevue": "^3.39.0",
+        "quill": "^2.0.2",
         "shetabit-laravel-vue-pagination": "^2.3.7",
         "stripe": "^14.15.0",
         "sweetalert2": "^11.9.0",
