--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "league/flysystem-aws-s3-v3": "^3.23",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-analytics": "^4.1",
-        "stripe/stripe-php": "^10.21"
+        "stripe/stripe-php": "^10.21",
+        "tinymce/tinymce": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
