--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@stripe/stripe-js": "^2.4.0",
         "@tinymce/tinymce-vue": "^6.0.1",
         "@vue/compiler-sfc": "^3.3.8",
+        "@vueup/vue-quill": "^1.2.0",
         "admin-lte": "^3.2.0",
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^3.9.1",
@@ -49,6 +50,7 @@
         "vform": "^2.1.2",
         "vue-highlight-text": "^1.6.2",
         "vue-highlight-words": "^3.0.1",
+        "vue-quill-editor": "^3.0.6",
         "vue-router": "^4.2.5",
         "vue-word-highlighter": "^1.2.3",
         "vue3-clipboard": "^1.0.0",
