--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
         "php": "^8.0",
         "almasaeed2010/adminlte": "~3.2",
         "barryvdh/laravel-dompdf": "^2.2",
+        "fruitcake/laravel-cors": "^3.0",
         "google/cloud-speech": "^1.19",
         "google/cloud-storage": "^1.36",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.9",
         "jeroennoten/laravel-adminlte": "^3.9",
         "laravel/cashier": "^14.14",
         "laravel/framework": "^9.19",
