--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "jquery": "^3.7.1",
         "jspdf": "^2.5.1",
         "laravel-vue-pagination": "^4.1.3",
+        "masonry-layout": "^4.2.2",
         "primevue": "^3.39.0",
         "quill": "^2.0.2",
         "shetabit-laravel-vue-pagination": "^2.3.7",
