--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "league/flysystem-aws-s3-v3": "^3.23",
         "maatwebsite/excel": "^3.1",
         "spatie/laravel-analytics": "^4.1",
+        "spatie/laravel-honeypot": "^4.5",
         "stripe/stripe-php": "^10.21",
         "tinymce/tinymce": "^7.2"
     },
