--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^3.9.1",
         "clipboard": "^2.0.11",
+        "docx": "^9.0.0",
+        "file-saver": "^2.0.5",
         "hammerjs": "^2.0.8",
         "html2canvas": "^1.4.1",
         "jquery": "^3.7.1",
         "jspdf": "^2.5.2",
         "laravel-vue-pagination": "^4.1.3",
         "masonry-layout": "^4.2.2",
+        "papaparse": "^5.4.1",
         "primevue": "^3.39.0",
         "quill": "^2.0.2",
         "shetabit-laravel-vue-pagination": "^2.3.7",
