--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "sass": "^1.56.1",
         "sass-loader": "^12.6.0",
         "vue": "^3.4.27",
-        "vue-loader": "^17.4.2",
-        "vue-template-compiler": "^2.5.16",
+        "vue-loader": "^17.3.1",
+        "vue-template-compiler": "^2.7.16",
         "webpack": "^5.91.0",
         "webpack-cli": "^5.1.4"
     },
@@ -36,6 +36,7 @@
         "bootstrap-icons": "^1.11.3",
         "chart.js": "^3.9.1",
         "clipboard": "^2.0.11",
+        "compromise": "^14.14.2",
         "docx": "^9.0.0",
         "file-saver": "^2.0.5",
         "hammerjs": "^2.0.8",
