--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "stripe": "^14.15.0",
         "sweetalert2": "^11.9.0",
         "tinymce": "^7.2.1",
+        "transformers": "^3.1.0",
         "vform": "^2.1.2",
         "vue-highlight-text": "^1.6.2",
         "vue-highlight-words": "^3.0.1",
