--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "spatie/laravel-analytics": "^4.1",
         "spatie/laravel-honeypot": "^4.5",
         "stripe/stripe-php": "^10.21",
-        "tinymce/tinymce": "^7.2"
+        "tinymce/tinymce": "^7.2",
+        "yooper/php-text-analysis": "^1.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
