--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
         "vue-highlight-text": "^1.6.2",
         "vue-highlight-words": "^3.0.1",
         "vue-quill-editor": "^3.0.6",
+        "vue-rating": "^0.1.10",
         "vue-router": "^4.2.5",
+        "vue-star-rating": "^1.7.0",
         "vue-word-highlighter": "^1.2.3",
         "vue3-clipboard": "^1.0.0",
         "vue3-touch-events": "^4.1.8",
