--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "laravel-vue-pagination": "^4.1.3",
         "masonry-layout": "^4.2.2",
         "papaparse": "^5.4.1",
-        "primevue": "^3.39.0",
+        "primeicons": "^7.0.0",
+        "primevue": "^3.53.0",
         "quill": "^2.0.2",
         "shetabit-laravel-vue-pagination": "^2.3.7",
         "stripe": "^14.15.0",
@@ -57,7 +58,6 @@
         "vue-highlight-text": "^1.6.2",
         "vue-highlight-words": "^3.0.1",
         "vue-quill-editor": "^3.0.6",
-        "vue-rating": "^0.1.10",
         "vue-router": "^4.2.5",
         "vue-star-rating": "^1.7.0",
         "vue-word-highlighter": "^1.2.3",
