--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "resolve-url-loader": "^3.1.5",
         "sass": "^1.56.1",
         "sass-loader": "^12.6.0",
-        "vue": "^3.4.27",
+        "vue": "^3.5.12",
         "vue-loader": "^17.3.1",
         "vue-sound": "^0.1.10",
         "vue-template-compiler": "^2.7.16",
@@ -36,6 +36,7 @@
         "@vueup/vue-quill": "^1.2.0",
         "admin-lte": "^3.2.0",
         "bootstrap-icons": "^1.11.3",
+        "bootstrap-vue": "^2.23.1",
         "chart.js": "^3.9.1",
         "clipboard": "^2.0.11",
         "compromise": "^14.14.2",
