--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "laravel-vue-pagination": "^4.1.3",
         "masonry-layout": "^4.2.2",
         "papaparse": "^5.4.1",
+        "pdfmake": "^0.2.15",
         "primeicons": "^7.0.0",
         "primevue": "^3.53.0",
         "quill": "^2.0.2",
