--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=08bf5b5169e5822e67266a007d447cd8",
-    "/css/app.css": "/css/app.css?id=5efe2ee9b29b8d6faa0931f686888dae",
-    "/js/app.min.js": "/js/app.min.js?id=d41d8cd98f00b204e9800998ecf8427e",
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css",
+    "/js/app.min.js": "/js/app.min.js?id=ae0714c43d598dc852891245ee1d7939",
     "/css/app.min.css": "/css/app.min.css?id=5efe2ee9b29b8d6faa0931f686888dae"
 }
